bg en detalles y nuevos modelos

--- a/app/src/main/res/layout/ordendet_listv.xml
+++ b/app/src/main/res/layout/ordendet_listv.xml
@@ -14,7 +14,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:text="Pedido"
-        android:textSize="15sp"
+        android:textSize="14sp"
         android:textColor="@color/ordenEnc"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.5"
@@ -25,48 +25,52 @@
         android:id="@+id/tvCant"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="5dp"
-        android:text="Cant."
-        android:textSize="15sp"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:text="Tot. Art."
+        android:textSize="14sp"
         android:textColor="@color/ordenEnc"
+        app:layout_constraintEnd_toStartOf="@+id/guideline5"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvPedido"/>
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/tvNParte"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
-        android:layout_marginLeft="70dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
-        android:text="N. Parte"
-        android:textSize="15sp"
+        android:text="Cve Art."
+        android:textSize="14sp"
         android:textColor="@color/ordenEnc"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvPedido"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvPedido"
+        android:visibility="invisible"/>
 
     <TextView
         android:id="@+id/tvDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="3dp"
         android:text="Descripcion"
-        android:textSize="15sp"
+        android:textSize="14sp"
         android:textColor="@color/ordenEnc"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNParte" />
+        app:layout_constraintTop_toBottomOf="@+id/tvPedido" />
 
     <TextView
         android:id="@+id/tvObs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="3dp"
         android:text="Obs"
         android:textSize="14sp"
         android:textColor="@color/ordenEnc"
@@ -78,6 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:textSize="14sp"
         android:text="---------------------*******---------------------"
         android:textColor="@color/ordenEnc"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
