--- a/app/src/main/res/layout/fragment_terminados.xml
+++ b/app/src/main/res/layout/fragment_terminados.xml
@@ -66,7 +66,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/bgbotones"
-        android:text="Terminar Pedido"
+        android:text="Entregar al cliente"
         android:textColor="@color/txtbtn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
