--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,18 +40,20 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Continuar"
-        android:visibility="visible"
+        android:visibility="invisible"
+        android:background="@drawable/bgbotones"
+        android:textColor="@color/txtbtn"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lista" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnRechaza"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Rechazar"
-        android:visibility="visible"
+        android:visibility="invisible"
+        android:background="@drawable/bgbotones"
+        android:textColor="@color/txtbtn"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lista" />
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
