--- a/app/src/main/res/layout/fragment_pedidoshow.xml
+++ b/app/src/main/res/layout/fragment_pedidoshow.xml
@@ -85,7 +85,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btnProblema"
         android:layout_width="wrap_content"
         android:layout_height="37dp"
         android:layout_marginStart="25dp"
@@ -96,5 +96,6 @@
         app:layout_constraintEnd_toStartOf="@+id/ibtnMapsCli"
         app:layout_constraintHorizontal_bias="0.652"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
