--- a/app/src/main/res/layout/terminadosenc_listv.xml
+++ b/app/src/main/res/layout/terminadosenc_listv.xml
@@ -9,12 +9,12 @@
 
     <TextView
         android:id="@+id/tvFechaF"
-        android:layout_width="80dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="10dp"
-        android:text="Fecha"
+        android:text="Fecha: 00/20/20"
         android:textColor="@color/ordenEnc"
         android:textSize="14sp"
         app:layout_constraintHorizontal_bias="0.5"
@@ -23,10 +23,10 @@
 
     <TextView
         android:id="@+id/tviPedidof"
-        android:layout_width="70dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginLeft="25dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginLeft="80dp"
         android:layout_marginTop="10dp"
         android:text="Pedido"
         android:textColor="@color/ordenEnc"
@@ -34,26 +34,13 @@
         app:layout_constraintStart_toEndOf="@+id/tvFechaF"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tvdeTotArtF"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="10dp"
-        android:text="Tot. Art."
-        android:textColor="@color/ordenEnc"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline5"
-        app:layout_constraintStart_toEndOf="@+id/tviPedido"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.87" />
+        app:layout_constraintGuide_begin="345dp" />
 
     <ImageView
         android:id="@+id/imageView9"
@@ -61,44 +48,17 @@
         android:layout_height="45dp"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imageView8"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_buscar"
-        tools:ignore="VectorDrawableCompat"
-        android:visibility="invisible"/>
+        tools:ignore="VectorDrawableCompat" />
 
-    <TextView
-        android:id="@+id/tvNegocioF"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="4dp"
-        android:text="Negocio"
-        android:textColor="@color/ordenEnc"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tviPedidof" />
-
-    <TextView
-        android:id="@+id/tvDomF"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="5dp"
-        android:text="Domicilio"
-        android:textColor="@color/ordenEnc"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNegocioF" />
 
     <TextView
         android:id="@+id/tvCliF"
@@ -112,7 +72,7 @@
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvDomF"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvFechaF" />
 
     <TextView
         android:id="@+id/tvDomCliF"
@@ -126,7 +86,7 @@
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCliF"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvCliF" />
 
 
     <TextView
